--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
