--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "loadash": "^1.0.0",
@@ -26,10 +27,13 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "swiper": "^11.0.3",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
+    "tw-elements": "^1.0.0",
     "typescript": "5.2.2"
   },
   "devDependencies": {
