--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.0.3",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
